fixed button's alignment in ContentNav

--- a/core/src/ButtonGroup/ButtonGroup.less
+++ b/core/src/ButtonGroup/ButtonGroup.less
@@ -5,7 +5,7 @@
   display: inline-flex;
   flex-wrap: wrap;
   .child {
-    margin: 8px 8px 8px 0;
+    // margin: 8px 8px 8px 0;
 
     // &:first-child {
     //   margin-left: 0;
